--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
   output:
     ansi:
       enabled: always
+
+  graphql:
+    graphiql:
+      enabled: true
+      path: /graphiql
+      # http://localhost:8080/graphiql?path=/graphql
